# DisCoord

./: Cargo.toml  README.md
src/: main.rs
tests/data/: small-ex1.fa  small-ex2.fa  small-ex3.fa  small.2bit
